# GraphAtoms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml  wheel.yml
GraphAtoms/: README.md  __init__.py  _pyarrow.py
GraphAtoms/common/: __init__.py  abc.py  base.py  string.py
GraphAtoms/containner/: __init__.py  _aBox.py  _aMixin.py  _aSpeVib.py  _atmBox.py  _atmEng.py  _atmMix.py  _atomic.py  _g2IGraph.py  _gBonded.py  _graph.py  _ioDataPyG.py  _mConnComp.py  _mFreeE.py  _mNetworKit.py  _mRDKit.py  _sysCluster.py  _sysGas.py  _system.py
GraphAtoms/dataclasses/: __init__.py  _numpydantic.py  _pydantic2pyarrow.py  _pydanticMixin.py  _pydanticModel.py  test_dataclasses.py
GraphAtoms/geometry/: __init__.py  _bond_list.py  _distance.py  _distance_pairs.py  _neighbor_list.py  rotation.py  sample.py  test_geometry.py
GraphAtoms/reaction/: _dtPyArrow.py  _dtSQL.py  _event.py  _sql.py
GraphAtoms/reaction/_amove/: __init__.py  _abc.py  _base.py  _moveFB.py  _moveSP.py  _simNVT.py  test_mmc.py  test_move.py  zzz.py
GraphAtoms/reaction/_event/: _base.py  _ioMixin.py  event.py
GraphAtoms/reaction/_network/: _asedb.py  _base.py
GraphAtoms/system/: __init__.py  _test_speed.py
GraphAtoms/system/_atoms/: __init__.py  _box.py  _eng.py  system.py
GraphAtoms/system/_base/: __init__.py  _atomsAttr.py  _boxMixin.py  _engMixin.py  _gasMixin.py  system.py
GraphAtoms/system/_bonds/: _bondsAttr.py  _igraph.py  _scipy.py
GraphAtoms/system/_convert/: __init__.py  _ase.py  _graph.py  _pygdata.py  convert.py
GraphAtoms/system/_graph/: __init__.py  _igraph.py  _scipy.py
GraphAtoms/system/_sys/: _sysAllThing.py  _sysCluster.py  _sysGas.py
GraphAtoms/utils/: __init__.py  _pyarrow.py  bytes.py  bytestool.py  logger.py  ndarray.py  parser.py  rdutils.py
benchmark/: compress.py
rattler-recipe/: recipe.yaml
recipe/: meta.yaml  recipe.yaml
src/benchmark/: speed.py  test_hdf5_mp.py  test_sqlite_mp.py
src/graphatoms/arrayapi/: __init__.py  _array_api_compat.py  _array_api_typing.py  compat.py
src/graphatoms/dataclasses/: __init__.py  _pydantic2pyarrow.py  _pydanticMixin.py  _pydanticModel.py  graph.py
src/graphatoms/geometry/: __init__.py  _bond_list.py  _inner_outer.py  _mic.py  _neighbor_list.py  mic.py  test_geometry.py
src/graphatoms/reaction/: __init__.py
src/graphatoms/reaction/_abc/: __init__.py  rtgp.py
src/graphatoms/reaction/_amove/: test_mmc.py  test_move.py
src/graphatoms/reaction/_event/: __init__.py  _createMixin.py
src/graphatoms/reaction/_kmcevent/: __init__.py  _event.py  adsorption.py  desorption.py  reaction.py
src/graphatoms/reaction/_mcmove/: __init__.py  _moveSwap.py
src/graphatoms/reaction/_mdwarpper/: __init__.py
src/graphatoms/reaction/_network/: _base.py  _h5db.py
src/graphatoms/reaction/base/: __init__.py  move.py  rtgp.py
src/graphatoms/reaction/database/: __init__.py  sqliteASE.py
src/graphatoms/reaction/event/: __init__.py  _event.py  adsorption.py  desorption.py  reaction.py
src/graphatoms/reaction/mcmove/: __init__.py  _base.py  _moveFB.py  _moveSP.py  _moveSwap.py  _simNVT.py  zzz.py
src/graphatoms/reaction/mdwarpper/: __init__.py
src/graphatoms/reaction/network/: _base.py
src/graphatoms/system/: __init__.py  _sysCluster.py  _sysGas.py  _test_speed.py  atoms.py  bonds.py  graph.py  helper.py  sysCluster.py  sysGas.py  system.py
src/graphatoms/system/_atoms/: __init__.py  _box.py  _eng.py
src/graphatoms/system/_database/: base.py  hdf5.py
src/graphatoms/system/_graph/: __init__.py  _bonds.py  _sysGraph.py
src/graphatoms/system/_other/: _system.py
src/graphatoms/system/_sys/: __init__.py  _sysCluster.py  _sysGas.py
src/graphatoms/system/atoms/: _box.py  _struct.py
src/graphatoms/system/graph/: _bonds.py  _gasMixin.py  _sysGraph.py
src/graphatoms/utils/: __init__.py  _array_api_compat.py  logger.py  parser.py  rdutils.py  subgraph.py
src/tests/: test_dataclasses.py  test_geometry.py  test_geometry_mic.py  test_helper.py  test_smarts.py  test_sqlite_mp.py  test_system.py
src/tests-benchmark/: speed.py  test_igraph.py
src/tests-data/: 0-test.py  Pd80(2732ee).npz  Pd80C2O2(02350e).npz  Pd80C2O2(0adbb2).npz  Pd80C2O2(0e9316).npz  Pd80C2O2(10c94f).npz  Pd80C2O2(16973c).npz  Pd80C2O2(1874e4).npz  Pd80C2O2(18fe6c).npz  Pd80C2O2(27232f).npz  Pd80C2O2(3165b9).npz  Pd80C2O2(35b483).npz  Pd80C2O2(36dac5).npz  Pd80C2O2(42b1bc).npz  Pd80C2O2(42dee9).npz  Pd80C2O2(543d50).npz  Pd80C2O2(61d8e1).npz  Pd80C2O2(643ee7).npz  Pd80C2O2(70f4bd).npz  Pd80C2O2(722391).npz  Pd80C2O2(739ac6).npz  Pd80C2O2(75e953).npz  Pd80C2O2(8db7a3).npz  Pd80C2O2(8ff909).npz  Pd80C2O2(9b098d).npz  Pd80C2O2(9bf44b).npz  Pd80C2O2(a4d092).npz  Pd80C2O2(a9e9b0).npz  Pd80C2O2(ad9c0a).npz  Pd80C2O2(adff75).npz  Pd80C2O2(b759b4).npz  Pd80C2O2(b7d55d).npz  Pd80C2O2(c5152d).npz  Pd80C2O2(cbefc7).npz  Pd80C2O2(cd5175).npz  Pd80C2O2(da1d72).npz  Pd80C2O2(db7e2b).npz  Pd80C2O2(dba130).npz  Pd80C2O2(dca5f9).npz  Pd80C2O2(e67dc6).npz  (+105 more)
tests/: OctCu8_Cluster.csv  conftest.py  test_abc.py  test_container.py  test_dataclasses.py  test_reaction.py  test_system.py  test_system_speed.py  test_uRotation.py  test_utils.py
