[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/LiuGaoyong/GraphAtoms"
Repository = "https://github.com/LiuGaoyong/GraphAtoms"
Issues = "https://github.com/LiuGaoyong/GraphAtoms/issues/"

[project]
name = "graphatoms"
version = "1.1.4"
readme = "README.md"
description = "The Chemical Core Class for Graph Theory Analysis."
authors = [{ name = "LiuGaoyong", email = "liugaoyong_88@163.com" }]
license-files = ["src/LICENSE"]
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = [
    "chemistry",    #
    "graph theory",
    "reaction",
    "event",
    "KMC",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Intended Audience :: Science/Research',
]
dependencies = [
    # Chemoinformatics
    "ase",
    "pymatgen>2023.6",
    "rdkit>=2025",

    # Scientific Computing
    # numpy pandas, scipy
    "scikit-learn>=1.5",
    "array-api-compat>=1.10",
    "array_api-extra>=0.10",
    "pyarrow",

    # Graph Theory
    "igraph>=0.11", # high performance graph library based on C

    # Data Model
    "h5py>=3.16",
    "hydra-core",
    "numpydantic",
    "pydantic>=2.11",
    "python-snappy>=0.7.3",           # More Fase Data Compression
    "tomli; python_version < '3.11'", # use tomllib in python>=3.11
    "tomli-w",                        # TOML writer
    "typing-extensions",
    "types-array-api",
    "loguru",
]
[dependency-groups]
dev = [
    "ruff>=0.11",
    "array-api-strict",
    "pytest>=8.3",
    "pytest-xdist",
    "jupyter",
    "sqlmodel",        # SQL + pydantic
    'openbabel-wheel',
]

# uv config
[tool.uv]
package = true
[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple" # CERNET
default = true
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu/"
# explicit = true
# format = "flat"
# [tool.uv.sources]
# torch = [{ index = "pytorch-cpu" }]

# pytest config
[tool.pytest.ini_options]
filterwarnings = [
    "error", # All other warnings are transformed into errors.
    # ignore the following warnings that matching a regex
    # example: 'ignore:function ham\(\) is deprecated:DeprecationWarning',
    "ignore::RuntimeWarning",

]
addopts = '--maxfail=1 -rf' # exit after 1 failures, report fail info
testpaths = ['src/tests']

# ruff config
[tool.ruff]
line-length = 80
indent-width = 4
select = ["F", "E", "W", "UP"]
ignore = ["F722", "D100"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pixi.package]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
graphatoms = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest -s -vv"
benchmark = 'pytest -s src/tests-benchmark/*.py'

[tool.pixi.dependencies]
python = ">=3.12"
pytest = ">=9.0.3,<10"
array-api-compat = ">=1.15.0,<2"
array-api-extra = ">=0.11.0,<0.12"
array-api-strict = ">=2.5,<3"
ase = ">=3.28.0,<4"
pymatgen = ">=2026.5.4,<2027"
rdkit = ">=2025.9.5,<2027"
openbabel = ">=3.1.1,<4"
pyarrow = ">=21.0.0,<25"
scikit-learn = ">=1.8.0,<2"
python-igraph = ">=0.11.9,<0.12"
numpydantic = ">=1.8.1,<2"
python-snappy = ">=0.7.3,<0.8"
h5py = ">=3.16.0,<4"
hydra-core = ">=1.3.2,<2"
tomli-w = ">=1.2.0,<2"
loguru = ">=0.7.3,<0.8"
pytorch = ">=2.10.0,<3"
jax = ">=0.9.0,<0.10"
